# tradingagents-lightweight

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
examples/: run_analyze.py  run_backtest.py
talite/: __init__.py  agent.py  backtest.py  cli.py  config.py  data.py  execution.py  indicators.py  llm.py  news.py  prompts.py  screener.py  sentiment.py  strategy.py
